Refactoring and added custom types support